2006-09-09	Benedikt Meurer <benny@xfce.org>

	* README, configure.in.in, xfce4-session/: Merge the sudo and the HAL
	  shutdown helpers into a single shutdown helper, which tries to use
	  HAL first, and falls back to sudo.

2006-09-02	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2006-09-02	Benedikt Meurer <benny@xfce.org>

	* === Released 4.3.99.1 ===
	* NEWS, configure.in.in: Bump version.
	* po/*.po: Update Project-Id-Version.

2006-08-30	Benedikt Meurer <benny@xfce.org>

	* configure.in.in, xfce4-session/xfsm-compat-gnome.c: Support for
	  assistive technologies requires only GConf, based on patch from
	  Jani Monoses <jani@ubuntu.com>.

2006-08-28	Benedikt Meurer <benny@xfce.org>

	* xfsm-shutdown-helper/main.c: Add shutdown/reboot support for
	  Solaris. Based on patch from Moinak Ghosh <moinakg2002@yahoo.com>.
	  Bug #2230.

2006-08-15	Benedikt Meurer <benny@xfce.org>

	* xfce4-session/main.c: Revert previous change to reap child processes
	  as the sudo processes are already reaped in the sudo shutdown-helper
	  and the patch attached to bug #2088 causes xfce4-session to hang on
	  logout. Bug #2173.

2006-08-14	Benedikt Meurer <benny@xfce.org>

	* xfce4-session/main.c: Reap child processes to avoid sudo zombies
	  when cancelling the logout dialog. Bug #2088.
	* xfce4-session/xfsm-shutdown-helper-hal.c, AUTHORS, NEWS, README,
	  configure.in.in, xfce4-session/Makefile.am: Add support for HAL
	  to shutdown/reboot the computer, based on the Xubuntu patch by
	  Jani Monoses <jani@ubuntu.com>. Bug #2046.

2006-08-12	Benedikt Meurer <benny@xfce.org>

	* xfce4-tips/main.c(main): Fake a session id, so the session manager
	  will not save the tips as part of the session. Bug #1089.

2006-07-16	Benedikt Meurer <benny@xfce.org>

	* engines/balou/config.c, xfce4-session/xfsm-legacy.c: Apply patch
	  from Nick Schermer <nick@xfce.org> to fix a bunch of compiler
	  warnings.

2006-07-10	Benedikt Meurer <benny@xfce.org>
