@@ -1,6 +1,6 @@
 /* $Id$ */
 /*-
- * Copyright (c) 2003-2004 Benedikt Meurer <benny@xfce.org>
+ * Copyright (c) 2003-2006 Benedikt Meurer <benny@xfce.org>
  * All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
@@ -281,11 +281,7 @@ xfsm_splash_screen_load (XfsmSplashScreen *splash,
   gchar *filename;
 
   filename = g_module_build_path (LIBDIR "/xfce4/splash/engines", engine);
-#if GLIB_CHECK_VERSION(2,4,0)
   splash->module = g_module_open (filename, G_MODULE_BIND_LOCAL);
-#else
-  splash->module = g_module_open (filename, 0);
-#endif
   g_free (filename);
 
   if (G_LIKELY (splash->module != NULL))
