@@ -1,3 +1,11 @@
+2006-09-13	Benedikt Meurer <benny@xfce.org>
+
+	* xfce4-session/xfsm-splash-screen.c: Drop GLib 2.2 compat code.
+	* configure.in.in, xfce4-session/xfsm-manager.{c,h},
+	  xfce4-session/xfsm-startup.c: Handle failed applications faster on
+	  session startup and reduce the overhead caused by handing them over
+	  to init.
+
 2006-09-09	Benedikt Meurer <benny@xfce.org>
 
 	* README, configure.in.in, xfce4-session/: Merge the sudo and the HAL
